--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,52 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "zero2prod"
 
 [dependencies]
+actix-web = "4"
+serde = { version = "1.0.152", features = ["derive"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+config = { version = "0.11" }
+uuid = { version = "0.8.1", features = ["v4"] }
+chrono = "0.4.15"
+env_logger = "0.9"
+log = "0.4"
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
+secrecy = { version = "0.8", features = ["serde"] }
+tracing-actix-web = "0.5"
+serde-aux = "3"
+unicode-segmentation = "1"
+validator = "0.14"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+
+[dependencies.sqlx]
+version = "0.5.7"
+default-features = false
+features = [
+    "runtime-actix-rustls",
+    "macros",
+    "postgres",
+    "uuid",
+    "chrono",
+    "migrate",
+    "offline"
+]
+
+[dev-dependencies]
+once_cell = "1"
+claim = "0.5"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
+tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.5"
+serde_json = "1"
