confirmação de inscrição com token

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,19 +29,23 @@ tracing-actix-web = "0.5"
 serde-aux = "3"
 unicode-segmentation = "1"
 validator = "0.14"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
+rand = { version = "0.8", features = ["std_rng"] }
 
 [dependencies.sqlx]
 version = "0.5.7"
 default-features = false
 features = [
-    "runtime-actix-rustls",
-    "macros",
-    "postgres",
-    "uuid",
-    "chrono",
-    "migrate",
-    "offline"
+  "runtime-actix-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate",
+  "offline",
 ]
 
 [dev-dependencies]
