--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ thiserror = "1"
 anyhow = "1"
 base64 = "0.13"
 argon2 = { version = "0.3", features = ["std"] }
+urlencoding = "2"
+htmlescape = "0.3"
+
 
 [dependencies.sqlx]
 version = "0.5.7"
