--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,10 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4"
 serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 config = { version = "0.11" }
-uuid = { version = "0.8.1", features = ["v4"] }
+uuid = { version = "0.8.1", features = ["v4", "serde"] }
 chrono = "0.4.15"
 env_logger = "0.9"
 log = "0.4"
@@ -56,6 +57,11 @@ features = [
   "migrate",
   "offline",
 ]
+
+[dependencies.actix-session]
+git = "https://github.com/actix/actix-extras"
+branch = "master"
+features = ["redis-rs-tls-session"]
 
 [dev-dependencies]
 once_cell = "1"
