--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ argon2 = { version = "0.3", features = ["std"] }
 urlencoding = "2"
 htmlescape = "0.3"
 actix-web-flash-messages = { version = "0.3", features = ["cookies"] }
+actix-web-lab = "0.19.1"
 
 
 [dependencies.sqlx]
